# stockk

./: .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: fastapi.dockerfile  worker.dockerfile
backend/app/: alembic.ini  pyproject.toml  worker-beat-start.sh  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2dff01aa9453_.py  36b341ef1987_.py  c41be3aa8f64_.py  cfe1dad99ff5_.py  d2855955a50f_.py  d86aa89d65dc_.py  ef95937b7947_.py  f21bd34e9616_.py
backend/app/app/: backend_pre_start.py  celery_logging.json  celery_pre_start.py  custom_logging.py  deps.py  fastapi_logging.json  initial_data.py  main.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v0/: api.py  chart_storage.py
backend/app/app/api/api_v0/endpoints/: charts.py  drawing_templates.py  industries.py  items.py  login.py  study_templates.py  tcbs.py  tickers.py  tradingview.py  users.py  util.py
backend/app/app/core/: celery_app.py  security.py  settings.py
backend/app/app/crud/: __init__.py  base.py  crud_chart.py  crud_drawing_template.py  crud_industry.py  crud_item.py  crud_study_template.py  crud_ticker.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/models/: __init__.py  chart.py  drawing_template.py  industry.py  item.py  study_template.py  ticker.py  user.py
backend/app/app/schemas/: __init__.py  chart.py  drawing_template.py  industry.py  item.py  msg.py  oidc.py  response.py  study_template.py  tcbs.py  ticker.py  tradingview.py  user.py
backend/app/app/streamer/: __main__.py  app.py
backend/app/app/tasks/: __init__.py  common.py  test.py  ticker.py
backend/app/app/utils/: __init__.py  fastapi_pagination.py  file.py  sql_datetime.py
frontend/: .eslintignore  .eslintrc.js  .prettierignore  package.json
grafana/: celery-monitoring-grafana-dashboard.json
(+13 files in other folders)
